--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,11 @@ jobs:
 
       - name: setup
         run: |
-          python -m pip install --upgrade pip setuptools wheel black==19.10b0 isort
+          python -m pip install --upgrade pip setuptools wheel black==19.10b0
           pip install "poetry==${{ matrix.poetry-version }}"
 
       - name: black
         run: black --check .
-
-      - name: isort
-        run: isort --check .
 
       - name: poetry install
         working-directory: app/
