--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -8,7 +8,7 @@ build = "build.py"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-"mylib" = {path = "../mylib"}
+"mylib" = {path = "../mylib", develop = true}
 numpy = "^1.16"
 cython = "^0.29.24"
 
